[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/GFX/GUI/Background2.png" type="Texture" id=1]
[ext_resource path="res://UI/Menus/GameOver.gd" type="Script" id=2]
[ext_resource path="res://Assets/GFX/GUI/stranger_big.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/GFX/GUI/main_theme.tres" type="Theme" id=4]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
margin_bottom = 100.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Round" type="Label" parent="VBoxContainer"]
margin_right = 433.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 3 )
text = "You survived to round "
align = 1
valign = 1

[node name="Players" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 433.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="PlayAgain" type="Button" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 433.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
text = "Play Again"

[node name="Leave" type="Button" parent="VBoxContainer"]
margin_top = 190.0
margin_right = 433.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
text = "Leave"
[connection signal="pressed" from="VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="VBoxContainer/Leave" to="." method="_on_Leave_pressed"]
